# moretea_arm

./: .gitmodules  CMakeLists.txt  README.md  package.xml
action/: PlayTrajectory.action
config/: closegripper.yaml  opengripper.yaml  raise.yaml  rest.yaml
config/old/: closeg_old.yaml  openg_old.yaml  raise_old.yaml  rest_old.yaml
include/Servo_STS3215/: CMakeLists.txt  MENU  MENU.cpp  servo_move
include/moretea_arm/: servo_backend.hpp
src/: play_trajectory_action_node.cpp  servo_backend.cpp
